--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
     <script>
         // ========== НАСТРОЙКИ ==========
-        const API_URL = 'https://zhenya4700.pythonanywhere.com/'; // ЗАМЕНИ НА СВОЙ АДРЕС!
+        const API_URL = 'https://zhenya4700.pythonanywhere.com'; // ЗАМЕНИ НА СВОЙ АДРЕС!
         // ===============================
 
         let tg = window.Telegram.WebApp;
@@ -434,3 +434,4 @@
     </script>
 </body>
 </html>
+
