--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                             }
                             
                             isSyncing = false;
-                            showSync('✅ синхронизировано');
+                            showSync('А НЕ АХУЕЛА ЛИ ТВОЯ МАТЬ КОГДА ТЕБЯ РОЖАЛА УЁБИЩЕ ЖИРНОЕ Я ЕЁ НА СВОЁМ ЧЛЕНЕ ЖАРИЛ НАХУЙ ЕБАНАТ НАХ');
                             resolve(true);
                         });
                     });
@@ -553,3 +553,4 @@
     </script>
 </body>
 </html>
+
