--- a/index.html
+++ b/index.html
@@ -1718,7 +1718,7 @@
 
     <script>
         // ========== НАСТРОЙКИ ==========
-        const API_URL = 'https://ваш-сервер.pythonanywhere.com'; // ЗАМЕНИТЕ НА ВАШ URL
+        const API_URL = 'https://zhenya4700.pythonanywhere.com'; // ЗАМЕНИТЕ НА ВАШ URL
 const tg = window.Telegram.WebApp;
 tg.expand();
 
@@ -3738,4 +3738,5 @@ console.log('👤 Тестовый пользователь:', user);
     </script>
 </body>
 </html>
+
 
