--- a/index.html
+++ b/index.html
@@ -1816,6 +1816,7 @@ console.log('👤 Тестовый пользователь:', user);
         let promoCodes = [];
         
         const allSkins = [
+            { id: 'default', name: 'ОБЫЧНЫЙ', icon: '⚪', price: 0 },
             { id: 'neon', name: 'НЕОНОВЫЙ', icon: '💜', price: 20 },
             { id: 'gold', name: 'ЗОЛОТОЙ', icon: '💛', price: 30 },
             { id: 'rainbow', name: 'РАДУЖНЫЙ', icon: '🌈', price: 40 },
@@ -3809,6 +3810,7 @@ window.enableTestMode = function() {
     </script>
 </body>
 </html>
+
 
 
 
